[package]
name = "vault"
version = "0.3.0"
authors = ["François Bastien <fmrbastien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vault"
path = "src/lib.rs"

[[bin]]
name = "vault"
path = "src/bin.rs"

[dependencies]
tokio = {version="~0.2.21", features=["full"]}
clap = "2.33.3"
ethabi = "12.0.0"
web3 = "0.14.0"
async-jsonrpc-client = "0.1.3"
serde_json = "1.0.60"
rustc-hex = "2.1.0"
async-trait = "0.1.42"
cli-table = "0.4"

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
panic = 'abort'
